[HACCP-73] Fixed spacing for external links in the footer menu; Added missing placeholder for search bar for MyHACCP header.

--- a/src/components/general/Footer/footer.scss
+++ b/src/components/general/Footer/footer.scss
@@ -88,7 +88,6 @@
       padding-right: 0.75rem;
 
       &.external-link {
-        padding-right: 2rem;
 
         &::after {
           right: 0.75rem;
